# clox

./: .clang-format  .editorconfig  CMakeLists.txt  Makefile  chunk.c  chunk.h  cmake_install.cmake  common.h  compiler.c  compiler.h  debug-build.sh  debug.c  debug.h  example.lox  exec-clox.sh  main.c  memory.c  memory.h  object.c  object.h  release-build.sh  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: package.json  pnpm-lock.yaml
tests/lib/: lox-executor.ts
tests/suites/: lox-executor.test.ts  lox-tests.test.ts
tests/suites/lox-code/: 01-add.lox  02-subtraction.lox  03-ternary_operator.lox  04-bound-methods.lox  05-strings_1.lox
